--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,11 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 116 -
+[2007/01/17] - RaX - Added IndexOfAID to CharaList. Gets a character by account id
+[2007/01/17] - RaX - Updated starting points in CharacterOptions.
+-
+
 - Rev 115 -
 [2007/01/17] - RaX - Joint commit by me and Tsusai, calcmaxhp/sp/speed are now in place and
  pull from the static database. They also send to the client and show on character create.
