- Rev 137 - [2007/01/26] - RaX - Bugfix - I forgot to use downto when dealing with the eventlist, caused  it to skip events. Fixed. -

--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,11 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 137 -
+[2007/01/26] - RaX - Bugfix - I forgot to use downto when dealing with the eventlist, caused
+ it to skip events. Fixed.
+-
+
 - Rev 136 -
 [2007/01/26] - RaX - Moved CharacterEventThread from Console to ZoneServer.
 -
