--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,16 @@ Developers & Contributers
 
 -------------------------------------------------------------------------------------------
 
+- Rev 143 -
+[2007/02/14] - Tsusai - Notes/Overview: Updated some SendBuffer calls to use GetPacketLength.
+[2007/02/14] - Tsusai - Updated CharacterServer, Character, ZoneRecv, and ZoneSend to use 
+ GetPacketLength.
+[2007/02/14] - Tsusai - ZoneSend : Changed procedure variables to make adjustments to send
+ the needed TCharacter.
+[2007/02/14] - Tsusai - TCPServerRoutines : Changed GetPacketLength to use word for version,
+ and LongWord as the return type.
+-
+
 - Rev 142 -
 [2007/02/09] - Tsusai - Notes/Overview: After some reading of newsgroups, I learned that
  the Cardinal type (0..4bil number type) is 4 bytes..but its not guaranteed on all OS's and
